--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -32,3 +32,22 @@
 .char{
   will-change: transform;
 }
+
+#custom-cursor{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 25px;
+  height: 25px;
+  pointer-events: none;
+  background-color: rgba($color: rgb(85, 85, 85), $alpha: 0.5);
+  border: 2px solid #000;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+
+}
+
+*{
+  cursor:none !important;
+}
