--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -26,6 +26,33 @@
       </div>
     </div>
   </section>
+
+  <section class="demo-section pin-section" #pinningDemo >
+    <div class="section-header">
+      <h2>Scroll Pinnning</h2>
+      <p>Elemento fijos durante el scroll con animaciones</p>
+    </div>
+
+    <div class="pin-container">
+      <div class="pinned-content">
+
+        <div class="pin-slide slide-1">
+          <h3>Primera slide</h3>
+          <p>Esta seccion se mantiene fija mientras se animan las salidas</p>
+        </div>
+        <div class="pin-slide slide-2">
+          <h3>Segunda slide</h3>
+          <p>Esta seccion se mantiene fija mientras se animan las salidas</p>
+        </div>
+        <div class="pin-slide slide-3">
+          <h3>Tercer slide</h3>
+          <p>Esta seccion se mantiene fija mientras se animan las salidas</p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
 </div>
 
 <div id="custom-cursor"></div>
