--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -1,3 +1,26 @@
+*{
+  cursor:none !important;
+}
+
+.section-header{
+  text-align:center;
+  margin-bottom: 3rem;
+
+  h2{
+    font-size:2.5rem;
+    color:#1f2937;
+    margin-bottom:1rem;
+    font-weight: 700;
+  }
+
+  p{
+    font-size:1.1rem;
+    color:#6b6280;
+    max-width:600px;
+    margin:0 auto;
+  }
+}
+
 .card-demo{
   background-color: white;
   border-radius: 20px;
@@ -48,6 +71,49 @@
 
 }
 
-*{
-  cursor:none !important;
+.pin-section{
+  min-height: 300vh;
+}
+.pin-container{
+  height: 100vh;
+  position: relative;
+}
+.pinned-content{
+  height:100vh;
+  position:relative;
+  overflow: hidden;
+  display:flex;
+}
+.pin-slide{
+  position: absolute;
+  width:100%;
+  height:100%;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+  border-radius: 20px;
+  color:white;
+  font-size:1.5rem;
+
+  &.slide-1{
+    background: linear-gradient(135deg, #292929 0%, #dddddd 100%);;
+  }
+  &.slide-2{
+    background: linear-gradient(135deg, #8972a0 0%, #764ba2 100%);;
+  }
+  &.slide-3{
+    background: linear-gradient(135deg, #e6ffa0 0%, #d5ff60 100%);;
+  }
+  h3{
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+  p{
+    font-size: 1.2rem;
+    max-width:600px;
+    opacity:0.9;
+  }
+
 }
